adding Project Description

--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNFV7im7nRu83WNXyJQeQA2",
+      "authorship_tag": "ABX9TyOXAEMRcKF4StMhrfVcspx5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/LatiefDataVisionary/airline-sentiment-nlp-capstone/blob/main/Untitled36.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/LatiefDataVisionary/airline-sentiment-nlp-capstone/blob/main/notebooks/notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -52,7 +52,7 @@
           "height": 452
         },
         "id": "j4bpEHJagVfB",
-        "outputId": "5e5b61a4-41fa-4e7f-f0a5-85c5d04828a2"
+        "outputId": "6f3b174e-1d41-402d-e2df-243be3c3a551"
       },
       "execution_count": 2,
       "outputs": [
@@ -97,7 +97,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-97eccf01-e487-47bd-a40e-56d32338a2c4\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-21f958e9-9066-4778-8598-594267d53e05\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -230,7 +230,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-97eccf01-e487-47bd-a40e-56d32338a2c4')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-21f958e9-9066-4778-8598-594267d53e05')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -282,12 +282,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-97eccf01-e487-47bd-a40e-56d32338a2c4 button.colab-df-convert');\n",
+              "        document.querySelector('#df-21f958e9-9066-4778-8598-594267d53e05 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-97eccf01-e487-47bd-a40e-56d32338a2c4');\n",
+              "        const element = document.querySelector('#df-21f958e9-9066-4778-8598-594267d53e05');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -307,8 +307,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-c96b987a-a944-422b-a5b5-0e0c861231dd\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c96b987a-a944-422b-a5b5-0e0c861231dd')\"\n",
+              "    <div id=\"df-8cb7972e-baa4-439c-b015-d8a1b9dab361\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8cb7972e-baa4-439c-b015-d8a1b9dab361')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -427,7 +427,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-c96b987a-a944-422b-a5b5-0e0c861231dd button');\n",
+              "            document.querySelector('#df-8cb7972e-baa4-439c-b015-d8a1b9dab361 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -459,7 +459,7 @@
           "height": 431
         },
         "id": "_YdzNojkgVl4",
-        "outputId": "6b84952a-c4d7-4e68-cf04-466c97b9040b"
+        "outputId": "3594987c-9ee1-4818-9329-45ef9186d6de"
       },
       "execution_count": 3,
       "outputs": [
@@ -534,7 +534,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-234ce71f-3d26-45a0-94a5-e941fdc1aee8\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-4778367a-c378-4945-8288-99ce1aebf845\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -775,7 +775,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-234ce71f-3d26-45a0-94a5-e941fdc1aee8')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4778367a-c378-4945-8288-99ce1aebf845')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -827,12 +827,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-234ce71f-3d26-45a0-94a5-e941fdc1aee8 button.colab-df-convert');\n",
+              "        document.querySelector('#df-4778367a-c378-4945-8288-99ce1aebf845 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-234ce71f-3d26-45a0-94a5-e941fdc1aee8');\n",
+              "        const element = document.querySelector('#df-4778367a-c378-4945-8288-99ce1aebf845');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -852,8 +852,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-078ec3a8-182d-4560-b9f5-4c961d754ccb\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-078ec3a8-182d-4560-b9f5-4c961d754ccb')\"\n",
+              "    <div id=\"df-3dd44ddc-bbea-4a7a-9b9b-22daa6e10a64\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3dd44ddc-bbea-4a7a-9b9b-22daa6e10a64')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -972,7 +972,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-078ec3a8-182d-4560-b9f5-4c961d754ccb button');\n",
+              "            document.querySelector('#df-3dd44ddc-bbea-4a7a-9b9b-22daa6e10a64 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1002,7 +1002,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d69-twvKgVrL",
-        "outputId": "8d25da80-1c15-4f39-be9c-68e3c2bab79a"
+        "outputId": "d8e37f9c-a548-499a-e07e-5d87e575f2f7"
       },
       "execution_count": 4,
       "outputs": [
@@ -1047,7 +1047,7 @@
           "height": 554
         },
         "id": "hAUJSQDxgVvZ",
-        "outputId": "295bb3b4-c902-4964-db49-501db907c9ba"
+        "outputId": "61bcb8de-b39c-4390-ca18-1c3ef8d2768e"
       },
       "execution_count": 5,
       "outputs": [
@@ -1168,18 +1168,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "b898128a"
+        "id": "26a34fbe"
       },
       "source": [
-        "# Proyek Capstone: Analisis Sentimen Maskapai Penerbangan AS\n",
+        "# US Airline Sentiment Analysis Using Deep Learning\n",
         "\n",
-        "**Oleh:** Lathif Ramadhan\n",
+        "**By:** Lathif Ramadhan\n",
         "\n",
-        "## Deskripsi Proyek\n",
+        "## Project Description\n",
         "\n",
-        "Proyek ini bertujuan untuk menganalisis sentimen tweet tentang maskapai penerbangan AS menggunakan teknik Deep Learning, khususnya dengan model Jaringan Syaraf Tiruan (Neural Network) yang menggunakan Long Short-Term Memory (LSTM). Dataset yang digunakan adalah `Tweets.csv` dari Kaggle.\n",
-        "\n",
-        "Analisis sentimen akan membantu dalam memahami persepsi publik terhadap berbagai maskapai penerbangan berdasarkan tweet mereka. Hasil analisis ini dapat memberikan wawasan berharga bagi maskapai untuk meningkatkan layanan mereka."
+        "This project aims to analyze the sentiment of tweets towards US airlines using Natural Language Processing (NLP) techniques and a Deep Learning model, specifically Long Short-Term Memory (LSTM). The dataset used is `Tweets.csv` from Kaggle, which contains tweets about various US airlines. The sentiment analysis results are expected to provide insights into public perception of airlines based on Twitter data."
       ]
     }
   ]
