modification in Step 3: Text Preprocessing & Cleaning

--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPrN/rciVZCXTcf51RPkoBy",
+      "authorship_tag": "ABX9TyMrehauGvgMX3cfUeiEoG4y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +57,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ab409483",
-        "outputId": "4d7049fe-9a65-4320-f245-26079e11798d"
+        "outputId": "aef07667-8528-46d4-e9da-d4a9892d798b"
       },
       "source": [
         "import pandas as pd\n",
@@ -74,6 +74,7 @@
         "import re\n",
         "import nltk\n",
         "import pickle\n",
+        "from nltk.corpus import stopwords\n",
         "\n",
         "# Additional Setup\n",
         "plt.style.use('seaborn-v0_8-whitegrid')\n",
@@ -95,7 +96,7 @@
         "\n",
         "print(\"Setup complete and libraries imported successfully.\")"
       ],
-      "execution_count": 2,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -1402,12 +1403,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "DEzj9b1jdJoW",
-        "outputId": "a5751b42-61a6-4ef1-fca3-481d5bc3dc5e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 539
-        }
+        },
+        "id": "DEzj9b1jdJoW",
+        "outputId": "a5751b42-61a6-4ef1-fca3-481d5bc3dc5e"
       },
       "execution_count": 12,
       "outputs": [
@@ -1435,12 +1436,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "32afea12",
-        "outputId": "cc7fccad-aa89-4a51-e884-890b7bbd74b8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 754
-        }
+        },
+        "id": "32afea12",
+        "outputId": "cc7fccad-aa89-4a51-e884-890b7bbd74b8"
       },
       "source": [
         "negative_reasons = df[df['airline_sentiment'] == 'negative']['negativereason'].value_counts()\n",
@@ -1491,12 +1492,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "45bb09f3",
-        "outputId": "bfe3977e-81c5-446b-d280-13beabe94981",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 714
-        }
+        },
+        "id": "45bb09f3",
+        "outputId": "bfe3977e-81c5-446b-d280-13beabe94981"
       },
       "source": [
         "plt.figure(figsize=(8, 6))\n",
@@ -1547,14 +1548,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 223
+          "height": 380
         },
         "id": "a26d3b6f",
-        "outputId": "a229bde7-4c14-4c9a-86e6-d2b6aebdb7bb"
+        "outputId": "b732807c-5d4d-469b-bd47-0f09b32c7ac8"
       },
       "source": [
-        "from nltk.corpus import stopwords\n",
-        "\n",
         "# Text Preprocessing Function\n",
         "def preprocess_text(text):\n",
         "    # Remove URLs\n",
@@ -1581,9 +1580,9 @@
         "\n",
         "# Display the first few rows of 'text' and 'clean_text' for comparison\n",
         "print(\"Original vs Cleaned Text:\")\n",
-        "display(df[['text', 'clean_text']].head())"
+        "display(df[['text', 'clean_text']].head(10))"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1602,17 +1601,27 @@
               "2  @VirginAmerica I didn't today... Must mean I n...   \n",
               "3  @VirginAmerica it's really aggressive to blast...   \n",
               "4  @VirginAmerica and it's a really big bad thing...   \n",
+              "5  @VirginAmerica seriously would pay $30 a fligh...   \n",
+              "6  @VirginAmerica yes, nearly every time I fly VX...   \n",
+              "7  @VirginAmerica Really missed a prime opportuni...   \n",
+              "8    @virginamerica Well, I didn't…but NOW I DO! :-D   \n",
+              "9  @VirginAmerica it was amazing, and arrived an ...   \n",
               "\n",
               "                                          clean_text  \n",
               "0                                               said  \n",
               "1      plus youve added commercials experience tacky  \n",
               "2       didnt today must mean need take another trip  \n",
               "3  really aggressive blast obnoxious entertainmen...  \n",
-              "4                               really big bad thing  "
+              "4                               really big bad thing  \n",
+              "5  seriously would pay flight seats didnt playing...  \n",
+              "6  yes nearly every time fly vx ear worm wont go ...  \n",
+              "7  really missed prime opportunity men without ha...  \n",
+              "8                                      well didntbut  \n",
+              "9              amazing arrived hour early youre good  "
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-497a5bd3-6623-4f06-802a-7ecadfcea3f1\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-e5fbfe56-4836-4971-a330-e27d78cf0bf4\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1661,13 +1670,38 @@
               "      <td>@VirginAmerica and it's a really big bad thing...</td>\n",
               "      <td>really big bad thing</td>\n",
               "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>@VirginAmerica seriously would pay $30 a fligh...</td>\n",
+              "      <td>seriously would pay flight seats didnt playing...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>@VirginAmerica yes, nearly every time I fly VX...</td>\n",
+              "      <td>yes nearly every time fly vx ear worm wont go ...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>@VirginAmerica Really missed a prime opportuni...</td>\n",
+              "      <td>really missed prime opportunity men without ha...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>@virginamerica Well, I didn't…but NOW I DO! :-D</td>\n",
+              "      <td>well didntbut</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>@VirginAmerica it was amazing, and arrived an ...</td>\n",
+              "      <td>amazing arrived hour early youre good</td>\n",
+              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-497a5bd3-6623-4f06-802a-7ecadfcea3f1')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e5fbfe56-4836-4971-a330-e27d78cf0bf4')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1719,12 +1753,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-497a5bd3-6623-4f06-802a-7ecadfcea3f1 button.colab-df-convert');\n",
+              "        document.querySelector('#df-e5fbfe56-4836-4971-a330-e27d78cf0bf4 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-497a5bd3-6623-4f06-802a-7ecadfcea3f1');\n",
+              "        const element = document.querySelector('#df-e5fbfe56-4836-4971-a330-e27d78cf0bf4');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1744,8 +1778,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-c1b35902-4123-48cc-aa8c-9b4edfed56d5\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c1b35902-4123-48cc-aa8c-9b4edfed56d5')\"\n",
+              "    <div id=\"df-b2b94e78-138d-46e1-a2cc-6077eb7e7895\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b2b94e78-138d-46e1-a2cc-6077eb7e7895')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1864,7 +1898,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-c1b35902-4123-48cc-aa8c-9b4edfed56d5 button');\n",
+              "            document.querySelector('#df-b2b94e78-138d-46e1-a2cc-6077eb7e7895 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1876,7 +1910,7 @@
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
-              "summary": "{\n  \"name\": \"display(df[['text', 'clean_text']]\",\n  \"rows\": 5,\n  \"fields\": [\n    {\n      \"column\": \"text\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 5,\n        \"samples\": [\n          \"@VirginAmerica plus you've added commercials to the experience... tacky.\",\n          \"@VirginAmerica and it's a really big bad thing about it\",\n          \"@VirginAmerica I didn't today... Must mean I need to take another trip!\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"clean_text\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 5,\n        \"samples\": [\n          \"plus youve added commercials experience tacky\",\n          \"really big bad thing\",\n          \"didnt today must mean need take another trip\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"display(df[['text', 'clean_text']]\",\n  \"rows\": 10,\n  \"fields\": [\n    {\n      \"column\": \"text\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 10,\n        \"samples\": [\n          \"@virginamerica Well, I didn't\\u2026but NOW I DO! :-D\",\n          \"@VirginAmerica plus you've added commercials to the experience... tacky.\",\n          \"@VirginAmerica seriously would pay $30 a flight for seats that didn't have this playing.\\nit's really the only bad thing about flying VA\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"clean_text\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 10,\n        \"samples\": [\n          \"well didntbut\",\n          \"plus youve added commercials experience tacky\",\n          \"seriously would pay flight seats didnt playing really bad thing flying va\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {}
