step 4:   Encoding Label Target (One-Hot Encoding)

--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMrehauGvgMX3cfUeiEoG4y",
+      "authorship_tag": "ABX9TyPcZCv1xijGoMBBu2uM/6K0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1927,6 +1927,47 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Define Features (X) and Target (y)"
+      ],
+      "metadata": {
+        "id": "rajkTzfu0D53"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = df['clean_text']\n",
+        "y = df['airline_sentiment']"
+      ],
+      "metadata": {
+        "id": "xPye5tuD0Z5-"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Encoding Label Target (One-Hot Encoding)"
+      ],
+      "metadata": {
+        "id": "vsi352vp0lzn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_encoded = pd.get_dummies(y)"
+      ],
+      "metadata": {
+        "id": "8RaUYzq30mVB"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -1937,13 +1978,6 @@
         "outputId": "a2780a09-56ef-4326-f91c-cec9b993e92c"
       },
       "source": [
-        "# Define Features (X) and Target (y)\n",
-        "X = df['clean_text']\n",
-        "y = df['airline_sentiment']\n",
-        "\n",
-        "# Encoding Label Target (One-Hot Encoding)\n",
-        "y_encoded = pd.get_dummies(y)\n",
-        "\n",
         "# Display the first few rows of the encoded target\n",
         "print(\"Encoded Target Variable (y_encoded):\")\n",
         "display(y_encoded.head())\n",
